# Risky-Business-Simulator

./: BronzeCompany.cpp  BronzeCompany.h  CMakeLists.txt  Company.cpp  Company.h  GoldCompany.cpp  GoldCompany.h  Player.cpp  Player.h  README.md  Risk.cpp  Risk.h  SilverCompany.cpp  SilverCompany.h  main.cpp  main.h
