cmake_minimum_required(VERSION 3.26)
project(A3_PhuocNguyen_Final)

set(CMAKE_CXX_STANDARD 17)

add_executable(A3_PhuocNguyen_Final main.cpp
        main.h
        Player.cpp
        Player.h
        Company.cpp
        Company.h
        Risk.cpp
        Risk.h
        GoldCompany.cpp
        GoldCompany.h
        SilverCompany.cpp
        SilverCompany.h
        BronzeCompany.cpp
        BronzeCompany.h
)
